[workspace]
members = ["tardis-macros", "tardis", "examples/*"]
exclude = ["examples/tracing-otlp"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[workspace.package]
version = "0.1.0-rc.18"
authors = ["gudaoxuri <i@sunisle.org>"]
description = "Elegant, clean Rust development framework"
keywords = ["http", "database", "web", "redis", "mq"]
categories = ["asynchronous", "web-programming", "database", "caching"]
homepage = "https://github.com/ideal-world/tardis"
documentation = "https://docs.rs/tardis/"
repository = "https://github.com/ideal-world/tardis"
edition = "2021"
license = "MIT/Apache-2.0"
rust-version = "1.72"


[workspace.dependencies]
tardis-macros = { path = "./tardis-macros" }