[package]
name = "tardis-macros"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

[lib]
name = "tardis_macros"
path = "src/lib.rs"
proc_macro = true

[features]
reldb-postgres = []
reldb-mysql = []

[dependencies]
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = { version = "0.20.1" }
nanoid = { version = "0.4" }

[dev-dependencies]
trybuild = "1.0"
tardis = { path = "../tardis", features = ["reldb-postgres"] }
rust_decimal = { version = "1" }
