[package]
name = "tardis"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "README.md"

[lib]
name = "tardis"
path = "src/lib.rs"

[features]
default = ["rt-tokio", "tardis-macros"]
rt-tokio = ["tokio"]
conf-remote = ["web-client", "async-trait"]
crypto = ["rust-crypto", "rsa"]
crypto-with-sm = ["libsm", "num-bigint"]
future = ["rt-tokio", "futures", "async-stream", "futures-util", "async-trait"]
reldb-core = ["future", "sqlparser", "sea-orm", "sqlx"]
reldb-postgres = [
    "reldb-core",
    "sea-orm/postgres-array",
    "sea-orm/sqlx-postgres",
]
reldb-mysql = ["reldb-core", "sea-orm/sqlx-mysql"]
reldb-sqlite = ["reldb-core", "sea-orm/sqlx-sqlite"]
reldb = ["reldb-core", "reldb-postgres", "reldb-mysql", "reldb-sqlite"]
web-server = ["future", "poem", "poem-openapi", "poem-openapi-derive"]
web-client = ["rt-tokio", "reqwest"]
ws-client = ["rt-tokio", "tokio-tungstenite"]
cache = ["futures-util", "redis"]
mq = ["futures-util", "lapin", "amq-protocol-types", "async-global-executor"]
mail = ["lettre"]
os = ["rt-tokio", "async-trait", "anyhow", "rust-s3"]
test = ["testcontainers"]

[dependencies]
# Basic
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
derive_more = { version = "0.99" }
nanoid = { version = "0.4" }
base64 = { version = "0.21" }
hex = { version = "0.4" }
lazy_static = { version = "1.4" }
rand = { version = "0.8" }
rand_core = { version = "0.6" }
chrono = { version = "0.4" }
env_logger = { version = "0.10" }
config = { version = "0.13" }
regex = { version = "1.5" }
url = { version = "2.2" }
openssl = { version = "0.10", features = ["vendored"] }
lru = { version = "0.9.0" }
native-tls = { version = "0.2" }

# Log
log = { version = "0.4" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# macros
tardis-macros = { version = "0.1.0-alpha34", path = "../tardis-macros", optional = true }

# Tokio
tokio = { version = "1.18", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
], optional = true }

# Crypto
rust-crypto = { version = "0.2", optional = true }
rsa = { version = "0.8", features = ["pem"], optional = true }
libsm = { version = "0.5", optional = true }
num-bigint = { version = "0.4.3", optional = true }

# Future
futures = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }

# RelDB
sea-orm = { version = "0.11", features = [
    "macros",
    "runtime-tokio-native-tls",
    "debug-print",
], optional = true }
sqlx = { version = "0.6", features = ["any"], optional = true }
sqlparser = { version = "0.30", optional = true }

# Web Server
poem-openapi = { version = "2", features = [
    "rapidoc",
    "chrono",
    "websocket",
], optional = true }
poem-openapi-derive = { version = "2", optional = true }
poem = { version = "1.3", features = [
    "csrf",
    "opentelemetry",
    "rustls",
    "prometheus",
    "websocket",
], optional = true }

# Web Client
reqwest = { version = "0.11", features = ["json"], optional = true }

# Websocket Client
tokio-tungstenite = { version = "0.18", features = [
    "native-tls",
], optional = true }

# Redis
redis = { version = "0.22", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
], optional = true }

# Rabbit
lapin = { version = "2.0", optional = true }
amq-protocol-types = { version = "7.0", optional = true }
async-global-executor = { version = "2.0", optional = true }

#Mail
lettre = { version = "0.10.0-rc.6", features = [
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls",
    "builder",
], optional = true }

#Object Storage
rust-s3 = { version = "0.32", optional = true }
anyhow = { version = "1.0", optional = true }

# Test
testcontainers = { version = "0.14", optional = true }

[dev-dependencies]
# Common
tokio = { version = "1.18", features = ["time", "rt", "macros"] }
criterion = { version = "0.4" }

[[test]]
name = "test_config"
required-features = ["crypto"]

[[test]]
name = "test_config_with_remote"
required-features = ["crypto", "conf-remote"]

[[test]]
name = "test_crypto"
required-features = ["crypto", "crypto-with-sm"]

[[test]]
name = "test_reldb_client"
required-features = ["test", "reldb"]

[[test]]
name = "test_web_server"
required-features = ["test", "web-server", "cache", "web-client"]

[[test]]
name = "test_web_client"
required-features = ["test", "web-client"]

[[test]]
name = "test_websocket"
required-features = ["test", "web-server", "ws-client"]

[[test]]
name = "test_cache_client"
required-features = ["test", "cache"]

[[test]]
name = "test_mq_client"
required-features = ["test", "mq"]

[[test]]
name = "test_search_client"
required-features = ["test", "web-client"]

[[test]]
name = "test_mail_client"
required-features = ["test", "mail"]

[[test]]
name = "test_os_client"
required-features = ["test", "os"]

[[bench]]
name = "json_benchmark"
harness = false

[[bench]]
name = "field_benchmark"
harness = false

[[bench]]
name = "crypto_benchmark"
harness = false
required-features = ["crypto", "crypto-with-sm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
