[package]
name = "tardis-example-cache"
version = "0.1.0"
authors = ["gudaoxuri"]
edition = "2021"

[dependencies]
serde = { version = "^1", features = ["derive"] }
tokio = { version = "^1.17", features = ["macros", "time", "rt-multi-thread"] }
tardis = { path = "../..", features = ["cache", "test"] }
# Example only
testcontainers = { version = "^0" }



