[package]
name = "tardis-example-mq"
version = "0.1.0"
authors = ["gudaoxuri"]
edition = "2021"

[dependencies]
serde = { version = "^1", features = ["derive"] }
tokio = { version = "1.15.0", features = ["macros", "time", "rt-multi-thread"] }
tardis = { path = "../..", features = ["mq", "test"] }
# Example only
testcontainers = { version = "^0" }



