[package]
name = "tardis-example-multi-apps"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
tardis-example-multi-apps-doc = { path = "doc"}
tardis-example-multi-apps-tag = { path = "tag"}

serde = { version = "1", features = ["derive"] }
# Tardis Functions
tardis = { path = "../../tardis", features = ["web-server", "test"] }
