[package]
name = "tardis-example-perf-test"
version = "0.1.0"
authors = ["gudaoxuri"]
edition = "2021"

[dependencies]
# Tardis Functions
tardis = { path = "../..", features = ["web-server", "reldb"] }
# Web server dependencies
poem-openapi = { version = "^1.3" }
# Reldb dependencies
sea-orm = { version = "^0.7", features = ["macros"] }
