[package]
name = "tardis-example-reldb"
version = "0.1.0"
authors = ["gudaoxuri"]
edition = "2021"

[dependencies]
serde = { version = "^1", features = ["derive"] }
log = { version = "^0" }
tokio = { version = "1.15.0", features = ["macros"] }
tardis = { path = "../..", features = ["reldb", "test"] }
sea-orm = { version = "0.6.0", features = ["macros"] }
# Example only
testcontainers = { version = "^0" }



