[package]
name = "tardis-example-todos"
version = "0.1.0"
authors = ["gudaoxuri"]
edition = "2021"

[dependencies]
serde = { version = "^1", features = ["derive"] }
# Tardis Functions
tardis = { path = "../..", features = ["web-server", "reldb", "test"] }
# Web server dependencies
poem-openapi = { version = "^1.3" }
# Reldb dependencies
sea-orm = { version = "^0.6", features = ["macros"] }
# Example only
testcontainers = { version = "^0" }

