[package]
name = "tardis-example-web-client"
version = "0.1.0"
authors = ["gudaoxuri"]
edition = "2021"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
tokio = { version = "1.15.0", features = ["macros"] }
tardis = { path = "../..", features = ["web-client"] }

