[package]
name = "tardis-example-multi-apps-tag"
version = "0.1.0"
authors = ["gudaoxuri"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }

tardis = { path = "../../..", features = ["reldb", "web-server"] }
sea-orm = { version = "0.9", features = ["macros"] }
poem-openapi = { version = "2" }
